use sudo to install the global package

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 
       - run:
           name: install angular-cli
-          command: 'npm install -g @angular/cli'
+          command: 'sudo npm install -g @angular/cli'
 
       - restore_cache:
           keys: dependency-cache-{{ checksum "package.json" }}
